--- a/src/index.html
+++ b/src/index.html
@@ -45,9 +45,39 @@
 </head>
 <body>
     <aside class="sidepanel">
-        <a href="https://t-do.ru/dorzhenkovskaya" class="sidepanel__link"><img src="icons/social/telegram.svg" alt="telegram"></a>
-        <a href="https://www.instagram.com/polina_dorzhenkovskaya/" class="sidepanel__link"><img src="icons/social/instagram.svg" alt="instagram"></a>
-        <a href="https://github.com/Dorzhenkovskaya" class="sidepanel__link"><img src="icons/social/github.svg" alt="github"></a>
+        <a href="https://t-do.ru/dorzhenkovskaya" class="sidepanel__link">
+            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 1280.000000 1280.000000" preserveAspectRatio="xMidYMid meet">
+                <g transform="translate(0.000000,1280.000000) scale(0.100000,-0.100000)"
+                fill="#000000" stroke="none">
+                <path d="M5995 12794 c-913 -71 -1659 -270 -2430 -649 -1258 -619 -2292 -1653
+                -2910 -2910 -376 -765 -586 -1548 -646 -2409 -15 -223 -6 -849 15 -1046 92
+                -849 301 -1568 661 -2275 634 -1243 1640 -2239 2880 -2850 705 -347 1401 -545
+                2220 -632 245 -26 985 -26 1230 0 957 102 1794 370 2595 832 1185 684 2156
+                1781 2682 3030 271 643 414 1214 490 1955 21 201 17 961 -5 1175 -135 1277
+                -584 2388 -1362 3370 -998 1259 -2450 2104 -4030 2345 -338 51 -489 62 -925
+                65 -228 1 -437 1 -465 -1z m-1665 -3248 c160 -27 4995 -1056 5076 -1081 260
+                -80 338 -259 217 -500 -14 -27 -288 -405 -608 -840 -319 -434 -584 -795 -588
+                -802 -5 -7 146 -170 395 -429 222 -229 418 -437 436 -463 34 -47 62 -125 62
+                -173 0 -25 -4 -28 -31 -28 -37 0 -1438 97 -1526 105 l-62 7 -1340 1483 c-737
+                815 -1352 1492 -1367 1504 -80 63 -129 -20 -86 -144 10 -27 542 -882 1182
+                -1900 641 -1017 1164 -1852 1164 -1855 -36 -130 -505 -1614 -524 -1655 -15
+                -33 -41 -77 -58 -97 -115 -130 -247 -69 -363 167 -43 89 -2383 6142 -2431
+                6290 -42 130 -5 281 87 348 49 35 74 46 145 63 74 17 119 17 220 0z"/>
+                </g>
+            </svg>
+        </a>
+        <a href="https://www.instagram.com/polina_dorzhenkovskaya/" class="sidepanel__link">
+            <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M-6.01032e-07 6.25L-2.73196e-07 13.75C-1.22337e-07 17.2012 2.79875 20 6.25 20L13.75 20C17.2013 20 20 17.2012 20 13.75L20 6.25C20 2.79875 17.2012 -7.51891e-07 13.75 -6.01032e-07L6.25 -2.73196e-07C2.79875 -1.22337e-07 -7.51891e-07 2.79875 -6.01032e-07 6.25ZM13.75 1.875C16.1625 1.875 18.125 3.8375 18.125 6.25L18.125 13.75C18.125 16.1625 16.1625 18.125 13.75 18.125L6.25 18.125C3.8375 18.125 1.875 16.1625 1.875 13.75L1.875 6.25C1.875 3.8375 3.8375 1.875 6.25 1.875L13.75 1.875Z" fill="black"/>
+                <path d="M5 10C5 12.7612 7.23875 15 10 15C12.7613 15 15 12.7612 15 10C15 7.23875 12.7612 5 10 5C7.23875 5 5 7.23875 5 10ZM13.125 10C13.125 11.7225 11.7225 13.125 10 13.125C8.27625 13.125 6.875 11.7225 6.875 10C6.875 8.2775 8.27625 6.875 10 6.875C11.7225 6.875 13.125 8.2775 13.125 10Z" fill="black"/>
+                <path d="M5.29123 4.625C5.29123 4.25704 4.99295 3.95875 4.62499 3.95875C4.25703 3.95875 3.95874 4.25704 3.95874 4.625C3.95874 4.99296 4.25703 5.29125 4.62499 5.29125C4.99295 5.29125 5.29123 4.99296 5.29123 4.625Z" fill="black"/>
+            </svg>    
+        </a>
+        <a href="https://github.com/Dorzhenkovskaya" class="sidepanel__link">
+            <svg width="19" height="20" viewBox="0 0 19 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M-4.37114e-07 9.99951C-1.95608e-07 15.5245 4.36167 19.9995 9.74107 19.9995C14.0457 19.9995 17.6962 17.1345 18.9832 13.162C19.0749 12.662 18.7734 12.4787 18.5148 12.4787C18.2835 12.4787 17.6706 12.487 16.8585 12.4912C17.4459 15.2728 15.5517 15.8595 15.5517 15.8595C14.4274 16.3145 14.1267 16.972 14.1267 16.972C13.5228 17.8778 13.5352 16.902 13.5352 16.902C13.603 15.8978 14.5389 15.3703 14.5389 15.3703C16.0283 14.4787 15.5979 13.0295 15.3493 12.4578C14.719 12.3678 14.2903 12.1103 14.0466 11.8245C13.8029 14.0453 12.9652 16.3795 9.23304 16.3795C8.16988 16.3795 7.30085 15.992 6.61933 15.3503C6.37316 15.4628 5.3827 15.8003 4.04116 15.2628C4.04116 15.2628 3.78012 14.4253 5.03988 12.5128C4.82345 11.7128 4.71606 10.8628 4.7111 10.0128C4.71606 9.16284 4.82345 8.31285 5.03988 7.51284C3.78012 5.61285 4.04116 4.77535 4.04116 4.77535C5.3827 4.23785 6.37316 4.57534 6.61933 4.67535C7.30085 4.03785 8.16988 3.65035 9.23304 3.65035C12.9752 3.65035 13.7987 5.98784 14.0383 8.21284C14.3307 7.86284 14.928 7.53784 15.8408 7.53784C17.1444 7.53784 18.1918 7.55034 18.5082 7.55034C18.7635 7.55034 19.0683 7.37534 18.9708 6.86284C17.692 2.86201 14.0391 -0.000488895 9.74107 -0.000488707C4.36167 -0.000488472 -6.7851e-07 4.47701 -4.37114e-07 9.99951Z" fill="#212121"/>
+            </svg>                
+        </a>
         <div class="sidepanel__divider"></div>
         <div class="sidepanel__text"><span>Социальные сети</span></div>
     </aside>
@@ -106,6 +136,42 @@
             <div class="promo__btns">
                 <a href="#" class="promo__link btn">Портфолио</a>
                 <a href="#" class="promo__link">Про меня</a>
+            </div>
+        </div>
+    </section>
+
+    <section class="about">
+        <div class="container">
+            <div class="about__wrapper">
+                <div class="about__photo">
+                <img src="img/main_photo.jpg" alt="photo">
+                </div>
+                <div class="about__descr">
+                    <h2 class="title title_fz16 about__title">Про меня</h2>
+                    <div class="title title_fz36 about__subtitle">Меня зовут Полина</div>
+                    <div class="divider"></div>
+                    <p class="about__text">Мне нравится участвовать в начальных этапах проекта, чтобы получить четкое представление о масштабах и направлениях задач. Я действую лучше всего, когда мне разрешено использовать и демонстрировать собственную изобретательность и компетентность. Я хочу работать в атмосфере, где первостепенное значение имеет обмен творческими идеями, поддержка обсуждений и совместное принятие решений.</p>
+                </div>
+                <div class="about__skills">
+                    <div class="about__skills-item">
+                        <div class="about__skills-circle">
+                            <img src="icons/about_me/web_development.svg" alt="web-dev">
+                        </div>
+                        <div>
+                            <div class="title title_fz14">Web-разработка</div>
+                            <div class="about__skills-text">Разработка функций, которые работают на клиентской стороне веб-сайта. Создание пользовательского интерфейса по дизайн-макетам в Photoshop.</div>
+                        </div>
+                    </div>
+                    <div class="about__skills-item">
+                        <div class="about__skills-circle">
+                            <img src="icons/about_me/design.svg" alt="design">
+                        </div>
+                        <div>
+                            <div class="title title_fz14">UI/UX Design</div>
+                            <div class="about__skills-text">Создание интерфейсов, отрисовывание кнопок, иконок и форм.</div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
