--- a/src/index.html
+++ b/src/index.html
@@ -135,7 +135,7 @@
             <h1 class="title title_fz48 promo__title">Я web-разработчик из города Казань</h1>
             <div class="promo__btns">
                 <a href="#" class="promo__link btn">Портфолио</a>
-                <a href="#" class="promo__link">Про меня</a>
+                <a href="#" class="promo__link promo__link-about">Про меня</a>
             </div>
         </div>
     </section>
