create section resume

--- a/src/index.html
+++ b/src/index.html
@@ -176,6 +176,70 @@
         </div>
     </section>
 
+    <section class="resume">
+        <div class="container">
+            <h2 class="title title_fz16 resume__title">Опыт</h2>
+            <div class="title title_fz36 resume__subtitle">Чем я буду полезна</div>
+            <div class="divider"></div>
+
+            <div class="resume__wrapper">
+                <div class="resume__column">
+                    <h3 class="title title_fz20 resume__column-title">Образование</h3>
+                    <ul>
+                        <li>
+                            <div class="resume__item">
+                                <div class="resume__item-head">
+                                    <div class="resume__item-icon">
+                                        <img src="icons/experience/university.svg" alt="university">
+                                    </div>
+                                    <h4 class="title title_fz14">ФГАОУ ВО "Казанский (Приволжский) федеральный университет"</h4>
+                                    <div class="resume__item-location">Диплом бакалавриата | Казань (2018-2022)</div>
+                                </div>
+                                <div class="resume__item-body">Институт вычислительной математики и информационных технологий (ИВМиИТ-ВМК).
+                                    Кафедра технологий программирования.
+                                    Направление: 09.03.03 – Прикладная информатика
+                                </div>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="resume__item">
+                                <div class="resume__item-head">
+                                    <div class="resume__item-icon">
+                                        <img src="icons/experience/courses.svg" alt="courses">
+                                    </div>
+                                    <h4 class="title title_fz14">ВЕБ-разработчик</h4>
+                                    <div class="resume__item-location">Сертификат по Web-разработке</div>
+                                </div>
+                                <div class="resume__item-body">Онлайн курс ВЕБ-разработчик - HTML5, CSS3, Bootstrap4, JavaScript.
+                                </div>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+
+                <div class="resume__column">
+                    <h3 class="title title_fz20 resume__column-title">Опыт работы</h3>
+                    <ul>
+                        <li>
+                            <div class="resume__item">
+                                <div class="resume__item-head">
+                                    <div class="resume__item-icon">
+                                        <img src="icons/experience/developer.svg" alt="developer">
+                                    </div>
+                                    <h4 class="title title_fz14">Front-End Developer</h4>
+                                    <div class="resume__item-location">Фриланс | Казань (2021) </div>
+                                </div>
+                                <div class="resume__item-body">Работа на себя.
+                                </div>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+                <div class="resume__column"></div>
+            </div>
+        </div>
+    </section>
+
     <script src="js/script.js"></script>
 </body>
 </html>
