--- a/src/index.html
+++ b/src/index.html
@@ -235,7 +235,111 @@
                         </li>
                     </ul>
                 </div>
-                <div class="resume__column"></div>
+            </div>
+        </div>
+    </section>
+
+    <section class="skills">
+        <div class="container">
+            <h2 class="title title_fz16 skills__title">Навыки</h2>
+            <div class="title title_fz36 skills__subtitle">Что я использую в работе</div>
+            <div class="divider"></div>
+
+            <div class="skills__wrapper">
+                <div class="skills__item">
+                    <div class="skills__icon">
+                        <img src="icons/skills/html5.svg" alt="html5">
+                    </div>
+                    <h3 class="title title_fz14">HTML5</h3>
+                    <p class="skills__text">Именно он создает каркас вашего сайта или приложения, а пятая версия позволит мне создавать более SEO-оптимизированную структуру вашего продукта.</p>
+                </div>
+                <div class="skills__item">
+                    <div class="skills__icon">
+                        <img src="icons/skills/css3.svg" alt="css3">
+                    </div>
+                    <h3 class="title title_fz14">CSS3</h3>
+                    <p class="skills__text">Этот язык стилей позволяет мне создавать абсолютно любой внешний вид вашего сайта или приложения. Все ограничивается только вашей фантазией!</p>
+                </div>
+                <div class="skills__item">
+                    <div class="skills__icon">
+                        <img src="icons/skills/js.svg" alt="js">
+                    </div>
+                    <h3 class="title title_fz14">Java Script</h3>
+                    <p class="skills__text">Этот язык программирования позволяет оживить все что угодно: слайдеры, окна, подсказки, вкладки, получение данных от сервера и многое другое.</p>
+                </div>
+                <div class="skills__item">
+                    <div class="skills__icon">
+                        <img src="icons/skills/jquery.svg" alt="jquery">
+                    </div>
+                    <h3 class="title title_fz14">Jquery</h3>
+                    <p class="skills__text">Библиотека Jquery позволит ускорить разработку. Без необходимости интегрировать в проект мы её не будем, но навык работы с ней присутствует.</p>
+                </div>
+                <div class="skills__item">
+                    <div class="skills__icon">
+                        <img src="icons/skills/bootstrap.svg" alt="bootstrap">
+                    </div>
+                    <h3 class="title title_fz14">Bootstrap</h3>
+                    <p class="skills__text">Фреймворк Bootstrap позволяет мне создавать оформления для типографики, веб-форм, кнопок, меток, блоков навигации и прочих компонентов веб-интерфейса при помощи шаблонов.</p>
+                </div>
+                <div class="skills__item">
+                    <div class="skills__icon">
+                        <img src="icons/skills/node.js.svg" alt="node.js.">
+                    </div>
+                    <h3 class="title title_fz14">Node.js</h3>
+                    <p class="skills__text">Эта платформа позволяет создавать бэкенд для вашего продукта - “мозги”, которые будут выполнять действия, которые пользователь не видит.</p>
+                </div>
+                <div class="skills__item">
+                    <div class="skills__icon">
+                        <img src="icons/skills/mongo.db.svg" alt="mongo.db.">
+                    </div>
+                    <h3 class="title title_fz14">Mongo.db</h3>
+                    <p class="skills__text">Это нереляционная база данных, которая будет хранить данные вашего сайта или приложения.</p>
+                </div>
+                <div class="skills__item">
+                    <div class="skills__icon">
+                        <img src="icons/skills/postgresql.svg" alt="postgresql">
+                    </div>
+                    <h3 class="title title_fz14">PostgreSQL</h3>
+                    <p class="skills__text">Это свободная объектно-реляционная СУБД, которая будет хранить данные вашего сайта или приложения.</p>
+                </div>
+            </div>
+
+            <div class="skills__rating">
+                <div class="skills__rating-item">
+                    <div class="skills__rating-title title title_fz14">Создание сайтов</div>
+                    <div class="skills__rating-percent">100%</div>
+                    <div class="skills__rating-line">
+                        <span style="width: 350px;"></span>
+                    </div>
+                </div>
+                <div class="skills__rating-item">
+                    <div class="skills__rating-title title title_fz14">Создание приложений</div>
+                    <div class="skills__rating-percent">50%</div>
+                    <div class="skills__rating-line">
+                        <span style="width: 175px;"></span>
+                    </div>
+                </div>
+                <div class="skills__rating-item">
+                    <div class="skills__rating-title title title_fz14">Работа с данными</div>
+                    <div class="skills__rating-percent">80%</div>
+                    <div class="skills__rating-line">
+                        <span style="width: 280px;"></span>
+                    </div>
+                </div>
+                <div class="skills__rating-item">
+                    <div class="skills__rating-title title title_fz14">Креативность</div>
+                    <div class="skills__rating-percent">90%</div>
+                    <div class="skills__rating-line">
+                        <span style="width: 315px;"></span>
+                    </div>
+                </div>
+                <div class="skills__rating-item">
+                    <div class="skills__rating-title title title_fz14">Soft skills</div>
+                    <div class="skills__rating-percent">95%</div>
+                    <div class="skills__rating-line">
+                        <span style="width: 332.5px;"></span>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
