implement a script for automatic recalculation of interest

--- a/src/index.html
+++ b/src/index.html
@@ -309,35 +309,35 @@
                     <div class="skills__rating-title title title_fz14">Создание сайтов</div>
                     <div class="skills__rating-percent">100%</div>
                     <div class="skills__rating-line">
-                        <span style="width: 350px;"></span>
+                        <span></span>
                     </div>
                 </div>
                 <div class="skills__rating-item">
                     <div class="skills__rating-title title title_fz14">Создание приложений</div>
                     <div class="skills__rating-percent">50%</div>
                     <div class="skills__rating-line">
-                        <span style="width: 175px;"></span>
+                        <span></span>
                     </div>
                 </div>
                 <div class="skills__rating-item">
                     <div class="skills__rating-title title title_fz14">Работа с данными</div>
                     <div class="skills__rating-percent">80%</div>
                     <div class="skills__rating-line">
-                        <span style="width: 280px;"></span>
+                        <span></span>
                     </div>
                 </div>
                 <div class="skills__rating-item">
                     <div class="skills__rating-title title title_fz14">Креативность</div>
                     <div class="skills__rating-percent">90%</div>
                     <div class="skills__rating-line">
-                        <span style="width: 315px;"></span>
+                        <span></span>
                     </div>
                 </div>
                 <div class="skills__rating-item">
                     <div class="skills__rating-title title title_fz14">Soft skills</div>
                     <div class="skills__rating-percent">95%</div>
                     <div class="skills__rating-line">
-                        <span style="width: 332.5px;"></span>
+                        <span></span>
                     </div>
                 </div>
             </div>
