--- a/src/index.html
+++ b/src/index.html
@@ -373,6 +373,31 @@
         </div>
     </section>
 
+    <section class="price">
+        <div class="container">
+            <h2 class="title title_fz16 title__section-title">Прайс-лист</h2>
+            <div class="divider"></div>
+
+            <div class="price__wrapper">
+                <div class="price__item">
+                    <div class="price__type">Landing-page</div>
+                    <div class="price__count">от 8000 руб.</div>
+                    <div class="price__descr">Одностраничный сайт для презентации услуг/товаров/...</div>
+                </div>
+                <div class="price__item">
+                    <div class="price__type">Корпоративный сайт</div>
+                    <div class="price__count">от 20000 руб.</div>
+                    <div class="price__descr">Сайт для вашего бизнеса или компании</div>
+                </div>
+                <div class="price__item">
+                    <div class="price__type">Интернет-магазин</div>
+                    <div class="price__count">от 30000 руб.</div>
+                    <div class="price__descr">Инструмент для ваших продаж в сети</div>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <script src="js/script.js"></script>
 </body>
 </html>
