--- a/src/index.html
+++ b/src/index.html
@@ -426,7 +426,7 @@
                     </div>
                     <div class="title title_fz14 contacts__text">Или оставьте ваши данные и я сама вам напишу:</div>
                 
-                    <form action="#" class="contacts__form">
+                    <form id='contacts-form' action="#" class="contacts__form">
                         <div class="contacts__input">
                             <input required name='name' id='name' type="text">
                             <label for="name">Ваше имя</label>
@@ -437,13 +437,13 @@
                         </div>
 
                         <div class="contacts__textarea">
-                            <textarea name="text" id="text"></textarea>
+                            <textarea required minlength="5" name="text" id="text"></textarea>
                             <label for="text">Ваше сообщение</label>
                         </div>
                         <div class="contacts__triggers">
                             <button class="contacts__btn btn">Отправить сообщение</button>
                             <div class="contacts__policy">
-                                <input required type="checkbox">
+                                <input required name='checkbox_policy' type="checkbox">
                                 <span>Я согласен(а) с <a href="/policy.html">политикой конфиденциальности</a></span>
                             </div>
                         </div>
