--- a/src/index.html
+++ b/src/index.html
@@ -438,22 +438,22 @@
                 
                     <form id='contacts-form' action="#" class="contacts__form">
                         <div class="contacts__input">
-                            <input required name='name' id='name' type="text">
+                            <input name='name' id='name' type="text">
                             <label for="name">Ваше имя</label>
                         </div>
                         <div class="contacts__input">
-                            <input required name='email' id='email' type="email">
+                            <input name='email' id='email' type="email">
                             <label for="email">Ваша почта</label>
                         </div>
 
                         <div class="contacts__textarea">
-                            <textarea required minlength="5" name="text" id="text"></textarea>
+                            <textarea name="text" id="text"></textarea>
                             <label for="text">Ваше сообщение</label>
                         </div>
                         <div class="contacts__triggers">
                             <button class="contacts__btn btn">Отправить сообщение</button>
                             <div class="contacts__policy">
-                                <input required name='checkbox_policy' type="checkbox">
+                                <input name='checkbox_policy' type="checkbox">
                                 <span>Я согласен(а) с <a href="/policy.html">политикой конфиденциальности</a></span>
                             </div>
                         </div>
@@ -469,6 +469,7 @@
 
     <script src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
     <script src="js/wow.min.js"></script>
+    <script src="js/jquery.validate.min.js"></script>
     <script src="js/script.js"></script>
 </body>
 </html>
